fixed resume button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar {
 
 .LandingPage {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   background-color:  #ffffff;
   position: relative;
   text-align: left;
@@ -79,7 +79,7 @@ body::-webkit-scrollbar {
 @keyframes nameAnimation {
   to {
     opacity: -50%;
-    top: 200%;
+    top: 20%;
     text-align: center;
     font-size: 12vw;
     
@@ -118,14 +118,14 @@ body::-webkit-scrollbar {
   height: 10vh;
   width: 50%;
   top: 40%;
-  right:0%;
+  right:10%;
   overflow: hidden;
 
   position:fixed;
   z-index: 3;
   vertical-align: center;
   justify-content: right;
-  text-align: center;
+  text-align: right;
 
   font: "Tahoma";
  
@@ -176,6 +176,7 @@ body::-webkit-scrollbar {
     width: 100%;
     top: 30%;
     right:0%;
+    text-align: center;
     overflow: hidden;
   }
 
@@ -192,7 +193,7 @@ body::-webkit-scrollbar {
   @keyframes nameAnimation {
     to {
       opacity: -50%;
-      top: 400%;
+      top: 20%;
       text-align: center;
       font-size: 12vw;
       
@@ -236,6 +237,16 @@ body::-webkit-scrollbar {
   position: fixed;
   text-align: center;
   cursor: pointer;
+}
+
+.ExploreBar{
+  width: 100vw;
+  height: 20vh;
+  background-color:  #ffffff;
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .AboutPage {
